package org.example.Garment.Material;

public enum TypeMaterial {
  ALGODON,
  LANA,
  TELA,
  PIQUE,
  ACETATO,
  CUERO
}
