package org.example.Garment.Material;

public enum Weft {
  LISA,
  RAYADA,
  LUNARES,
  CUADROS,
  ESTAMPADO
  }
