package org.example.Prenda;

public enum Formalidad {
  FORMAL,
  INFORMAL,
  NEUTRA
}
