package org.example.outfit;

public enum Material {
  ALGODON,
  LANA,
  TELA,
  PIQUE,
  ACETATO,
  CUERO
}
